    - AstraDBDatabaseAdmin, DataAPIDatabaseAdmin: `create_keyspace`, `drop_keyspace`, `drop` (+ async)
    - Database, AsyncDatabase: `drop_collection`, `drop_table`
    - Collection, AsyncCollection: `drop`
Support for arbitrary 'database' and 'admin' headers throughout the object chain
Rename `CollectionVectorServiceOptions` class to `VectorServiceOptions`
Removed "raw_options" attribute from CollectionOptions class (redundant w.r.t `CollectionDescriptor.raw_descriptor`)
Reworked the options system:
    - an APIOptions object inherited at each "spawn" operation, with overrides
    - environment-dependent defaults if nothing supplied
    - "spawn" operations expose top-level aliases for selected settings
    - per-method overrides of the timeouts relevant to each method. Additionally, `timeout_ms` (formerly called 'max_time_ms') becomes an alias for the appropriate timeout for each method)
    - Admitting timeouts of zero to signal "no timeouts" throughout
    - collection and database's `info` method gets timeout parameters
    - (not user-facing) classes in the hierarchy other than DataAPIClient have breaking changes in their constructor (now options-first and keyword-arg-only)
    - introduced `serdes_options.custom_datatypes_in_reading`, also controlling datetime management in Collections
    - introduced `serdes_options.binary_encode_vectors`, affecting read/write wire format for collections
    - introduced `serdes_options.unroll_iterables_to_lists` to make the write path tolerant w.r.t. lazy iterables, numpy etc in writing vectors/lists
    - token and embedding API key coercion into `*Provider` happens at the Options' init layer
Major restructuring of the codebase into directories
    - some imports (supposedly not used externally) changed slightly
    - adapted and limited scope of test_imports.py
Removed AstraDBDatabaseAdmin's `from_api_endpoint` static method (reason: unused)
Rename main branch from 'master' ==> `main`