@@ -126,9 +126,9 @@ def test_imports() -> None:
         AstraDBAdminDatabaseInfo,
         AstraDBDatabaseInfo,
         CollectionDefaultIDOptions,
+        CollectionDefinition,
         CollectionDescriptor,
         CollectionInfo,
-        CollectionOptions,
         CollectionVectorOptions,
         EmbeddingProvider,
         EmbeddingProviderAuthentication,
