@@ -58,7 +58,8 @@ Signature change from `-> {"ok": 1}` to `-> None` for some admin and schema meth
     - Collection, AsyncCollection: `drop`
 Support for arbitrary 'database' and 'admin' headers throughout the object chain
 Rename `CollectionVectorServiceOptions` class to `VectorServiceOptions`
-Removed "raw_options" attribute from CollectionOptions class (redundant w.r.t `CollectionDescriptor.raw_descriptor`)
+Renamed 'CollectionOptions' class to `CollectionDefinition` (return type of `Collection.options()`):
+    - also removed its "raw_options" attribute (redundant w.r.t `CollectionDescriptor.raw_descriptor`)
 Reworked the options system:
     - an APIOptions object inherited at each "spawn" operation, with overrides
     - environment-dependent defaults if nothing supplied
